Fix css styling for bg and attempt to get cards to work on mobile

--- a/src/Flashcard/Flashcard.css
+++ b/src/Flashcard/Flashcard.css
@@ -7,6 +7,8 @@
     justify-content: center;
     align-items: center;
     transform-style: preserve-3d;
+    -webkit-transition: transform 0.5s ease;
+    -webkit-transition: -webkit-transform 0.5s ease;
     transition: all 0.5s ease;
 }
 
